# LangGraph_RAG_SYSTEM

./: .env.example  .gitignore  1150504會議記錄_整理版.md  DEPLOY.md  DOCKER_DEPLOY.md  FENGXING_GEMINI_MIGRATION_PLAN.md  MIGRATION.md  PLAN.md  README.md  SEARCH_INTEGRATION_PLAN.md  SETUP.md  SSE_TROUBLESHOOTING.md  SYSTEM.md  SYSTEM_OVERVIEW.md  TAILSCALE_FUNNEL_TROUBLESHOOTING.md  VLM_IMAGE_INTEGRATION_PLAN.md  XIBEN_INTEGRATION_PLAN.md  agent_flow.md  db.md  docker-compose.yml  ecosystem.config.js  enter-maintenance.bat  exit-maintenance.bat  feng_hsin_price_fetcher.py  fix-caddy-blocked.ps1  init-db.sql  maintenance.html  maintenance_server.py  reset-tailscale-routing.ps1  start-backend.bat  start-system.bat  system.md  token_summary.py
backend/: .dockerignore  .gitignore  Dockerfile  app.db  pyproject.toml  rescue_orphan_fd.py  run_server.py  search.db
backend/alembic/: env.py
backend/alembic/versions/: 6cd7a4c2bf6f_add_search_enabled_to_users.py  9431d4e5169d_add_admin_role_token_version_index_.py  a7f3e2b91c44_add_google_oauth_fields_to_users.py  c6ee55ce0d95_split_input_output_tokens.py  da6b9189693e_initial_schema.py
backend/app/: config.py  database.py  main.py  search_database.py
backend/app/api/: admin.py  auth.py  chat.py  conversations.py  export.py
backend/app/core/: dependencies.py  llm.py  rate_limit.py  security.py
backend/app/graph/: builder.py  state.py
backend/app/graph/nodes/: compact.py  context.py  form.py  form_exporter.py  form_fill.py  generation.py  grader.py  intent.py  retrieval.py  router.py  source_filter.py  unified_intent.py  vision.py
backend/app/models/: __init__.py  conversation.py  message.py  summary.py  user.py
backend/app/modules/: __init__.py
backend/app/modules/search/: __init__.py
backend/app/prompts/: __init__.py  registry.py
backend/app/prompts/compact/: __init__.py  summarize_v1.py
backend/app/prompts/form_fill/: __init__.py  collector_v1.py
backend/app/prompts/form_structurer/: __init__.py  v1.py
backend/app/prompts/grader/: __init__.py  grade_v1.py  rewriter_v1.py
backend/app/prompts/intent/: __init__.py  v1.py
backend/app/prompts/responder/: __init__.py  dynamic_export_done_v1.py  fill_collect_v1.py  fill_done_v1.py  qa_v1.py  (+1 more)
backend/app/rag/: doc_chunker.py  form_lookup.py  form_registry.json  jieba_dict.txt  retriever.py  session_store.py  vector_store.py
backend/app/schemas/: admin.py  auth.py  chat.py  conversation.py  export.py
backend/app/services/: audio_transcribe.py  auth_service.py  conversation_service.py  document_store.py  dynamic_form_export.py  email_service.py  export_service.py  form_fill_writer.py  google_oauth_service.py  image_store.py  upload_guard.py
backend/scripts/: 01_preprocess.py  02_chunk.py  03_generate_meta.py  04_review_meta.py  05_embed_ingest.py  06_verify.py  07_clean_chunks.py  build_010315_schema.py  build_form_schemas.py  cleanup_orphan_forms.py  dev.py  inspect_form.py  migrate_search_db.py  migrate_sqlite_to_pg.py  smoke_search_orchestrator.py  test_bm25_rebuild.py  test_cleanup.py  test_kb_image_guard.py  test_rate_limit_key.py  test_route_rewriter.py  test_transcribe.py  test_upload_guard.py  verify_010315_schema.py
backend/templates/: meeting_template.docx
backend/tests/: conftest.py  test_doc_chunker.py  test_retrieval_router.py  test_unified_intent.py
(+152 files in other folders)
