[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "openai>=1.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "langchain-openai>=0.3.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.44.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "python-docx>=1.0.0",
    "slowapi>=0.1.9",
    "aiosmtplib>=5.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
